--- a/IQueryable/Samples/Sample03/App.config
+++ b/IQueryable/Samples/Sample03/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="user" value="user"/>
-    <add key="password" value="password"/>
+    <add key="user" value="Aliaksandr_Zhytnitski@epam.com"/>
+    <add key="password" value="44sFTHP3gQ"/>
   </appSettings>
 </configuration>
