--- a/InteropTasks/PowerStateManager/PowerStateManagement.csproj
+++ b/InteropTasks/PowerStateManager/PowerStateManagement.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{96900DC2-8561-470D-8D4D-EB99AEA39BE4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PowerStateManager</RootNamespace>
-    <AssemblyName>PowerStateManager</AssemblyName>
+    <RootNamespace>PowerStateManagement</RootNamespace>
+    <AssemblyName>PowerStateManagement</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -29,6 +29,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>interop_tasks.pfx</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -40,9 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPowerStateManager.cs" />
     <Compile Include="NativeAPI.cs" />
+    <Compile Include="NativePowerStateManager.cs" />
     <Compile Include="PowerStateManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemBatteryState.cs" />
+    <Compile Include="SystemPowerInformation.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="interop_tasks.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
