--- a/MultithreadingTasks/SynchronousServer/SynchronousServer.csproj
+++ b/MultithreadingTasks/SynchronousServer/SynchronousServer.csproj
@@ -64,6 +64,7 @@
     <Compile Include="NamedPipeConnector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocketConnector.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
