--- a/MultithreadingTasks/Infrastructure/Infrastructure.csproj
+++ b/MultithreadingTasks/Infrastructure/Infrastructure.csproj
@@ -41,7 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Authentication.cs" />
+    <Compile Include="ConnectionEventArgs.cs" />
+    <Compile Include="IConnector.cs" />
     <Compile Include="Message.cs" />
+    <Compile Include="MessageReceivedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Notification.cs" />
   </ItemGroup>
