--- a/MultithreadingTasks/SynchronousServer/SynchronousServer.csproj
+++ b/MultithreadingTasks/SynchronousServer/SynchronousServer.csproj
@@ -52,19 +52,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChatServer.cs" />
-    <Compile Include="ConnectionEventArgs.cs" />
-    <Compile Include="MessageReceivedEventArgs.cs" />
-    <Compile Include="IConnector.cs" />
+    <Compile Include="IServerConnector.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="NamedPipeConnector.cs" />
+    <Compile Include="NamedPipeServerConnector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SocketConnector.cs" />
+    <Compile Include="SocketServerConnector.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
