--- a/OptimizationTask/ProfileSample/ProfileSample/ProfileSample.csproj
+++ b/OptimizationTask/ProfileSample/ProfileSample/ProfileSample.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\EncodedImageModel.cs" />
     <Compile Include="Models\ImageModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
