Optimization: update to use cache

--- a/OptimizationTask/ProfileSample/ProfileSample/Web.config
+++ b/OptimizationTask/ProfileSample/ProfileSample/Web.config
@@ -15,6 +15,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.webServer>
+        <staticContent>
+             <clientCache cacheControlMode="UseExpires" 
+                          httpExpires="Mon, 06 May 2020 00:00:00 GMT" />
+        </staticContent>
     <modules runAllManagedModulesForAllRequests="true" />
         <urlCompression doStaticCompression="false" />
   </system.webServer>
