--- a/AspectTask/ProfileSample/ProfileSample/Web.config
+++ b/AspectTask/ProfileSample/ProfileSample/Web.config
@@ -25,6 +25,13 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
+  <system.diagnostics>  
+    <trace autoflush="true">  
+      <listeners>  
+        <add name="logFileListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\Users\Aliaksandr_Zhytnitsk\Documents\log.txt" />  
+      </listeners>  
+    </trace>  
+  </system.diagnostics>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
